--- a/styles.css
+++ b/styles.css
@@ -32,7 +32,7 @@ height: 110px;
 span {
 font-size: 400%;
 color: firebrick;
-background-color: white;
+background-color: orange;
 text-align: center;
 }
 
