--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,7 @@ text-align: center;
 padding-bottom: 0px;
 margin-bottom: 0px;
 margin-top: 0px;
+color: crimson;
 }
 
 
@@ -11,15 +12,19 @@ text-align: center;
 font-size: 26;
 margin-top: 0px;
 margin-bottom: 0px;
+color: crimson;
 }
 
 h3 {
 margin-top: 0px;
 margin-bottom: 0px;
+color: crimson;
 }
 
 img {
 height: 125px;
+position: relative;
+top: 340px;
 }
 
 img:hover {
