--- a/styles.css
+++ b/styles.css
@@ -41,6 +41,7 @@ body {
   background-repeat: no-repeat;
 }
 #containerForPasswords{
+  margin-top:100%
   display: block;
   border: 3px blue solid;
   position: relative;
