--- a/styles.css
+++ b/styles.css
@@ -50,3 +50,10 @@ body {
   color: red;
   bototm: 0px;
 }
+
+.otherClass{
+  color: #000;
+  font-size: 1em;
+  text-align: left;
+  margin-top: 200%;
+}
